2004-08-02  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Documentation/GuiUser/DefaultsSummary.gsdoc: Clarify the role of
	NSGlobalDomain; explain that NSShowNonLocalizedStrings is a developer
	option (in absence of a document specifically documenting developer
	defaults, the doc will go here).

2004-08-02 16:32  Alexander Malmberg <alexander@malmberg.org>

	* Headers/AppKit/NSCell.h, Source/NSMenuView.m: Rename xDist and
	yDist to GSCellTextImageXDist and GSCellTextImageYDist.
	* Source/NSMenuItemCell.m: Rename xDist and yDist.
	(titleRectForBounds:): Reindent.
	* Source/NSButtonCell.m (-drawInteriorWithFrame:inView:, -cellSize):
	Adjust size calculations, make them more forgiving before clipping
	text, and make -cellSize and -drawInteriorWithFrame:inView: match
	each other again. Update xDist and yDist references.

2004-08-01 14:55  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSStandardWindowDecorationView.m (-drawTitleBar): Fix
	the centering of the title.

2004-08-01 14:28  Alexander Malmberg <alexander@malmberg.org>

	* TextConverters/RTF/RTFProducer.m (-_addAttributesString:): Only add
	attachmentFileWrapper to the attachments array if it isn't nil.

2004-07-30  Adrian Robert  <arobert@cogsci.ucsd.edu>

	* Documentation/GuiUser/GNUMakefile.postamble: Remove an unwanted
	level of hierarchy when installing GSdoc generated under
	Documentation/GuiUser.

2004-07-30 15:52  Alexander Malmberg <alexander@malmberg.org>

	* Headers/AppKit/NSGraphicsContext.h (-GSReadRect:): Document.
	* Source/NSBitmapImageRep.m (-initWithFocusedViewRect:): Update for
	new key names from GSReadRect:.
	* Source/NSGraphicsContext.m (-GSReadRect:): Return nil.

2004-07-29  Adrian Robert  <arobert@cogsci.ucsd.edu>

	* Documentation/GuiUser/DefaultsSummary.gsdoc: Added some explanation
	of how to set defaults and description of domains, since this isn't
	readily accessible elsewhere.  Also, documented
	NSShowNonLocalizedStrings default.

2004-07-28  Adam Fedor  <fedor@gnu.org>
